# training_password_manager

./: .gitignore  LICENSE  README.md  UI_password_manager.py  main.py  master_password_UI.py  password_manager_core.py  pyproject.toml
.github/workflows/: release.yml
